add new contracts

--- a/web3/index.html
+++ b/web3/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <script src="./node_modules/web3/dist/web3.min.js" > </script>
-        <script src="./web3/web3.js" type="module">  </script>
+        <script src="./web3/testing.js" type="module">  </script>
     </head>
     <body>
         <button> add appointment</button>
