tests + changes to some functions and contracts

--- a/web3/index.html
+++ b/web3/index.html
@@ -8,6 +8,18 @@
     <body>
         <button> add appointment</button>
         <button> retrieve appointments</button>
-        <button> retrievea appointment count</button>
+        <button> retrieve appointment count</button>
+        <button> get doctors</button>
+        <button> get doctor count</button>
+        <button> create doctor</button>
+        <button> get doctor by Id</button>
+        <button> delete doctor profile</button>
+        <button> delete doctor availability</button>
+        <button> create doctor availability</button>
+        <button> get patients</button>
+        <button> create patient</button>
+        <button> get patient by id</button>
+        <button> delete patient profile</button>
+
     </body>
 </html>
