--- a/web3/index.html
+++ b/web3/index.html
@@ -20,6 +20,8 @@
         <button> create patient</button>
         <button> get patient by id</button>
         <button> delete patient profile</button>
+        <button> update patient profile</button>
+        <button> get doctor availability</button>
 
     </body>
 </html>
