Appointment.sol contract changes + more functions

--- a/web3/index.html
+++ b/web3/index.html
@@ -17,11 +17,14 @@
         <button> delete doctor availability</button>
         <button> create doctor availability</button>
         <button> get patients</button>
+        <button> get patient count</button>
         <button> create patient</button>
         <button> get patient by id</button>
         <button> delete patient profile</button>
         <button> update patient profile</button>
         <button> get doctor availability</button>
+        <button> delete appointment</button>
+        <button>getAppointmentsByPatient and by doctor</button>
 
     </body>
 </html>
