tested patient code + edited contracts

--- a/web3/index.html
+++ b/web3/index.html
@@ -25,6 +25,7 @@
         <button> get doctor availability</button>
         <button> delete appointment</button>
         <button>getAppointmentsByPatient and by doctor</button>
+        <button>get patient by username</button>
 
     </body>
 </html>
